yiltc-v0.2-backup/testsuite/negative/default_param_too_few.yilt
// Error: too few args (x has no default)
fn needs_one(x int, y int = 10) int
    return x + y

fn main()
    print(needs_one())
